# WSU

CS1/Project 4/: README.md
CS1/Project1/: README.md
CS1/WordCount/: bread.txt
CS2/Project3/: train_schedule.txt
DataStructAndAlg/Project1/: Project1.cpp
DataStructAndAlg/Project2/: Character.cpp  Character.h  project2  project2.cpp  project2n
DataStructAndAlg/Project3/: CMakeLists.txt  Sequence.cpp  Sequence.h  project3TestHarness.cpp
DataStructAndAlg/Project4/: AVLTree.cpp  AVLTree.h  CMakeLists.txt  main.cpp
DataStructAndAlg/Project5/: CMakeLists.txt  Trie.cpp  Trie.h  main.cpp
DataStructAndAlg/Project6/: CMakeLists.txt  Database.cpp  Database.h  HashTable.cpp  HashTable.h  hashfunction.cpp  hashfunction.h  main.cpp
ITSystems/Project1/: README.md
ITSystems/Project2/: HOLLACK-cf.yml  README.md
ITSystems/Project3/: HOLLACK-cf.yml  README.md
ITSystems/basics-guide/: README.md  pullReqFile.md  unmergedFile.md
ITSystems/sample/: hello.md
MachineLearning/FinalProject-4900/: Trevor-Hollack-Final.ipynb  Trevor_Hollack_FinalProjectReport.docm
MachineLearning/Lab Assignment 2-4900/: Trevor-Hollack-4900-Lab2.ipynb
MachineLearning/Lab Assignment 3-4900/: Trevor-Hollack-Lab3.ipynb  android.csv
MobileDev/InClass3/: settings.gradle.kts
MobileDev/MarsPhotos/: local.properties
MobileDev/Project0/: local.properties  settings.gradle.kts
MobileDev/RPM/: settings.gradle.kts
MobileDev/RaceTracker/: local.properties
WebDev1/FinalProject/: index.html  interests.html  registration.html
WebDev1/TrevorHollackAssignment01/: index.html
(+147 files in other folders)
